@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.0-M2</version>
+        <version>2.5.0-M3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>net.bakaar</groupId>
@@ -22,7 +22,7 @@
     <description>Demo project for BDD testing and Hexagonal architecture</description>
     <packaging>pom</packaging>
     <properties>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
         <cucumber.version>6.10.2</cucumber.version>
         <testcontainer.version>1.15.2</testcontainer.version>
         <argLine>--enable-preview</argLine>
@@ -37,6 +37,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <!-- FIXME remove the version once Spring updated the dependency -->
+            <version>1.18.20</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -83,9 +85,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>${argLine}</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
